--- a/package.json
+++ b/package.json
@@ -8,16 +8,40 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap-icons": "^1.4.0",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "maz-ui": "^2.3.5",
+    "phone-number-input-field": "^0.1.6",
+    "scss": "^0.2.4",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
+    "vue-input-mask": "^0.0.11",
+    "vue-phone-number-input": "^1.1.10",
+    "vue-router": "^3.2.0",
+    "vue-tel-input": "^5.1.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.11.5",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "bootstrap": "^4.5.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "mutationobserver-shim": "^0.3.7",
+    "popper.js": "^1.16.1",
+    "portal-vue": "^2.1.7",
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-bootstrap-vue": "^0.7.0",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
