--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.4.0",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "esquery": "^1.4.0",
     "maz-ui": "^2.3.5",
     "phone-number-input-field": "^0.1.6",
     "scss": "^0.2.4",
