--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "esquery": "^1.4.0",
+    "express": "^4.17.1",
     "phone-number-input-field": "^0.1.6",
     "scss": "^0.2.4",
     "vue": "^2.6.11",
