--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "vue-phone-number-input": "^1.1.10",
     "vue-router": "^3.2.0",
     "vue-tel-input": "^5.1.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@babel/polyfill": "^7.11.5",
